problem with beans fixed

--- a/chat-demo/project/ChatDemo-web/src/main/webapp/home.xhtml
+++ b/chat-demo/project/ChatDemo-web/src/main/webapp/home.xhtml
@@ -8,9 +8,9 @@
         <title>Hello JSF 2!</title>
     </head>
     <body>
-       	<h1>#{welcome.lol}</h1>
+       	<h1>#{wilcommen.lol}</h1>
        	<ul>
-		    <ui:repeat value="#{welcome.all}" var="w">
+		    <ui:repeat value="#{wilcommen.all}" var="w">
 		        <li>
 		            #{w.id} - #{w.content}
 		        </li>
