--- a/hello/src/main/webapp/index.xhtml
+++ b/hello/src/main/webapp/index.xhtml
@@ -6,7 +6,7 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        #{helloBean.message}
+        <h1>#{helloBean.message}</h1>
     </h:body>
 </html>
 
