--- a/registration/src/main/webapp/register.xhtml
+++ b/registration/src/main/webapp/register.xhtml
@@ -2,13 +2,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Registration</title>
     </h:head>
     <h:body>
-        <h:form>
+        <h:form prependId="false">
             <p:panel header="Registration Form">
                 <h:panelGrid columns="3" id="regGrid">
                     <h:outputLabel for="name">Name:</h:outputLabel>
