--- a/registration/src/main/webapp/user/garden.xhtml
+++ b/registration/src/main/webapp/user/garden.xhtml
@@ -3,10 +3,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
-        <title>Registration Example</title>
+        <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <h:link outcome="user/home" value="Go to your personal home page"/><br/>
+        Logged user: #{userBean.name}<br/>
+        <h:link outcome="home" value="home"/><br />
+        <h:form>
+        <h:commandLink action="#{loginBean.logout()}" value="logout"/>
+        </h:form>
     </h:body>
 </html>
 
