--- a/registration/src/main/webapp/user/garden.xhtml
+++ b/registration/src/main/webapp/user/garden.xhtml
@@ -1,15 +1,16 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title>Facelet Title</title>
     </h:head>
     <h:body>
         Logged user: #{userBean.name}<br/>
-        <h:link outcome="home" value="home"/><br />
+        <p:link outcome="home" value="home"/><br />
         <h:form>
-        <h:commandLink action="#{loginBean.logout()}" value="logout"/>
+            <p:commandLink action="#{loginBean.logout()}" value="logout"/>
         </h:form>
     </h:body>
 </html>
